<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_search">Поиск</string>
    <string name="title_media">Медиатека</string>
    <string name="title_settings">Настройки</string>
    <string name="settings_title_theme">Темная тема</string>
    <string name="settings_title_share">Поделиться приложением</string>
    <string name="settings_title_support">Написать в поддержку</string>
    <string name="settings_title_user_agreement">Пользовательское соглашение</string>
    <string name="error">Что-то пошло не так</string>
    <string name="support_email_header">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_app_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">givemesomecoffee@yandex.ru</string>
    <string name="refresh">Обновить</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="empty_playlist">Вы не создали ни одного плейлиста</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="search_empty_state_description">Ничего не нашлось</string>
    <string name="error_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear_title">Очистить историю</string>
    <string name="favourites_title">Избранные треки</string>
    <string name="playlists_title">Плейлисты</string>

    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="playlist_created">Плейлист «%s» создан</string>
    <string name="track_added_to_playlist">Добавлено в плейлист "%s"</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист "%s"</string>
    <string name="playlist_creation_cancel_title">Завершить создание плейлиста?</string>
    <string name="playlist_creation_cancel_description">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_playlist_confirm">Хотите удалить плейлист «%s»?</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="playlist_create_toolbar">Новый плейлист</string>
    <string name="playlist_edit_toolbar">Редактировать</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_edit_confirm">Сохранить</string>
    <string name="playlist_empty_message">В плейлист не добавлен ни один трек</string>
    <string name="playlist_empty_share">В этом плейлисте нет списка треков, которым можно поделиться</string>

</resources>