<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="givemesomecoffee.ru.playlistmaker.feature.media.ui.screens.MediaFragment"
        android:label="@string/title_media" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="givemesomecoffee.ru.playlistmaker.feature.search_screen.presentation.SearchFragment"
        android:label="@string/title_search" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="givemesomecoffee.ru.playlistmaker.feature.settings.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/playListCreateFragment"
        android:name="givemesomecoffee.ru.playlistmaker.feature.media.ui.screens.create_playlist.PlayListCreateFragment"
        android:label="@string/playlist_create_toolbar" />
    <action
        android:id="@+id/action_global_playListCreateFragment"
        app:destination="@id/playListCreateFragment" />
    <fragment
        android:id="@+id/trackCardFragment"
        android:name="givemesomecoffee.ru.playlistmaker.feature.track_card.presentation.TrackCardFragment"
        android:label="" />
    <action
        android:id="@+id/action_global_trackCardFragment"
        app:destination="@id/trackCardFragment" />
    <dialog
        android:id="@+id/addToPlayListFragment"
        android:name="givemesomecoffee.ru.playlistmaker.feature.track_card.presentation.add_to_playlist.AddToPlayListFragment"
        android:label="AddToPlayListFragment" />
    <action
        android:id="@+id/action_global_addToPlayListFragment"
        app:destination="@id/addToPlayListFragment" />
    <fragment
        android:id="@+id/playlistCardFragment"
        android:name="givemesomecoffee.ru.playlistmaker.feature.playlist_card.ui.PlaylistCardFragment"
       /><action android:id="@+id/action_global_playlistCardFragment" app:destination="@id/playlistCardFragment"/>
</navigation>