<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/bottomsheet_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_bottomsheet_control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_to_playlist_toolbar"
        style="@style/Primary.Medium.19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/add_to_playlist"
        android:textAlignment="center"
        android:textColor="@color/yp_text_primary"
        app:layout_constraintTop_toTopOf="@id/bottomsheet_control" />

    <TextView
        android:id="@+id/create_playlist"
        style="@style/Primary.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button"
        android:paddingHorizontal="14dp"
        android:paddingVertical="10dp"
        android:text="@string/create_playlist"
        android:textAlignment="center"
        android:textColor="@color/yp_text_primary_inverted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_to_playlist_toolbar" />

    <givemesomecoffee.ru.playlistmaker.core.presentation.view.empty_view.PlaceholderScreen
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholder_description="@string/empty_playlist"
        app:placeholder_icon="@drawable/ic_empty_tracks"
        app:placeholder_screen_type="placeholder_info" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlists_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/create_playlist" />

</androidx.constraintlayout.widget.ConstraintLayout>
